styles.css
.contact{
    background-color:rgb(62, 62, 62);
    color:white;
    text-decoration:bold;
    text-align:center;
    font-family: Arial, Helvetica, sans-serif;
    font-weight:bold;
}
.projects{
    display:flex;
    flex-wrap:wrap;
    background-color:wheat;
    font-family: Arial, Helvetica, sans-serif;
    font-style:italic;
}
.skills{
    background-color:wheat;
    font-family:sans-serif;
    text-decoration:underline;
}
.about{
    background-color:wheat;
    background: #00b3d1;
    text-align: left;
    width: 100%;
}
body {
    background: wheat;
    font-family: Arial, Helvetica, sans-serif;
}
h1 {
    color:dimgrey;
    text-align:center;
}
.project{
    width: 30%;
    margin: 10px;
    padding: 20px 10px;
    background: orange;
    border-radius: 25%;
    align-content: center;
}
img{
    width: 300px;
    height: 300px;
    margin: 10px;
    border:2px solid red;
    display:block;
    margin:auto;
}
p{
    text-align:center;
    margin: 15px;
}
a{
    text-decoration: none;
    color: red;
    text-align: center;
}

